--- a/emulator.html
+++ b/emulator.html
@@ -93,7 +93,7 @@
 
         <div class="space-y-2">
             <label for="expression" class="font-semibold text-gray-300">Boolean Expression</label>
-            <input type="text" id="expression" class="w-full p-3 bg-gray-700 border-2 border-gray-600 rounded-lg focus:outline-none focus:border-blue-500 transition-colors" value="(A + B) * C">
+            <input type="text" id="expression" class="w-full p-3 bg-gray-700 border-2 border-gray-600 rounded-lg focus:outline-none focus:border-blue-500 transition-colors" value="(A OR B) AND NOT C">
             <div class="flex items-center mt-2">
                 <input type="checkbox" id="invert_final" class="h-4 w-4 rounded bg-gray-700 border-gray-600 text-blue-500 focus:ring-blue-500">
                 <label for="invert_final" class="ml-2 text-sm text-gray-400">Invert final result (NOT)</label>
@@ -170,7 +170,7 @@
             }
 
             function parseExpression(expression) {
-                const matches = expression.match(/\b[A-E]\b/g);
+                const matches = expression.match(/\b[A-E]\b/gi);
                 return matches ? [...new Set(matches.map(char => char.toUpperCase()))] : [];
             }
             
@@ -190,14 +190,24 @@
                     updateResultUI(null, null); // Waiting state
                     return;
                 }
-                let evalExpression = expression.toUpperCase();
+                let evalExpression = expression;
+
+                // --- START OF MODIFIED LOGIC ---
+                // Replace textual and alternative operators with standard JS operators.
+                // The 'gi' flag makes the replacement case-insensitive.
+                evalExpression = evalExpression.replace(/\bAND\b|&|\*/gi, '&&');
+                evalExpression = evalExpression.replace(/\bOR\b|\||\+/gi, '||');
+                evalExpression = evalExpression.replace(/\bXOR\b|\^|!=/gi, '!=');
+                evalExpression = evalExpression.replace(/\bNOT\b/gi, '!');
+                // --- END OF MODIFIED LOGIC ---
+
                 for (const key in inputStates) {
                     if (inputStates[key] !== 'undefined') {
-                        const regex = new RegExp(`\\b${key.toUpperCase()}\\b`, 'g');
+                        const regex = new RegExp(`\\b${key.toUpperCase()}\\b`, 'gi');
                         evalExpression = evalExpression.replace(regex, inputStates[key]);
                     }
                 }
-                evalExpression = evalExpression.replace(/\*/g, '&&').replace(/\+/g, '||').replace(/\^/g, '!=');
+                
                 try {
                     let finalResult = new Function(`return ${evalExpression}`)();
                     if (invertFinalCheckbox.checked) {
