--- a/emulator.html
+++ b/emulator.html
@@ -86,7 +86,7 @@
     <div class="w-full max-w-lg bg-gray-800 rounded-xl shadow-2xl p-6 md:p-8 space-y-6">
         
         <div class="flex flex-col items-center text-center">
-            <img src="https://tiwas.github.io/HomeyBooleanToolbox/no.tiwas.booleantoolbox/assets/icon.svg" alt="Boolean Toolbox Logo" class="w-20 h-20 mb-4 rounded-lg">
+            <img src="https://tiwas.github.io/HomeyBooleanToolbox/no.tiwas.booleantoolbox/assets/images/xlarge.jpeg" alt="Boolean Toolbox Logo" class="w-20 h-20 mb-4 rounded-lg">
             <h1 class="text-2xl md:text-3xl font-bold text-white">Boolean Logic Emulator</h1>
             <p class="text-gray-400 mt-1">For Homey Boolean Toolbox</p>
         </div>
