--- a/homey-boolean-editor.html
+++ b/homey-boolean-editor.html
@@ -166,7 +166,7 @@
     <script>
     class BooleanToolboxApp {
         // VIKTIG: Erstatt med din egen Client ID. Secret er fjernet.
-        CLIENT_ID = 'YOUR_CLIENT_ID';
+        CLIENT_ID = '68f4e7ffe34e830eaadf147d';
         
         // --- Appens tilstand (state) ---
         cloudApi = null;
