--- a/homey-boolean-editor.html
+++ b/homey-boolean-editor.html
@@ -132,6 +132,7 @@
                 async handleAuthRedirect(code) {
                     this.showScreen('loader');
                     try {
+                        // FIKS: Bygger URL nøyaktig likt som i login() for å garantere samsvar
                         const redirectUrl = `${window.location.origin}${window.location.pathname}`;
                         const response = await fetch('/.netlify/functions/get-token', {
                             method: 'POST',
