--- a/homey-boolean-editor.html
+++ b/homey-boolean-editor.html
@@ -147,7 +147,7 @@
                         }
                         
                         const tokenData = JSON.parse(responseText);
-                        this.cloudApi.setTokenSet(tokenData);
+                        this.cloudApi.setTokenSet
 
                         window.history.replaceState({}, document.title, window.location.pathname);
                         await this.postLogin();
