--- a/homey-boolean-editor.html
+++ b/homey-boolean-editor.html
@@ -1823,16 +1823,14 @@ A * B + !C"
                             .replace(/\bXOR\b/gi, '^');
                         
                         // Replace variables with their boolean values
-                        try {
                         Object.keys(values).forEach(variable => {
                             const upperVar = variable.toUpperCase();
                             const regex = new RegExp(`\\b${upperVar}\\b`, 'g');
                             jsExpr = jsExpr.replace(regex, values[variable] ? 'true' : 'false');
                         });
                         return eval(jsExpr) ? 1 : 0;
-                        } catch (e) { return null; }
                     } catch (e) {
-                        console.warn('Error evaluating expression:', e);
+                        // console.warn('Error evaluating expression:', e);
                         return null;
                     }
                 }
